mosaic spacing fix

--- a/components/features/Mosaic/default.scss
+++ b/components/features/Mosaic/default.scss
@@ -43,7 +43,7 @@
         padding: 40px 20px;
         width: initial;
         height: 400px;
-        margin: 0 1% 2%;
+        margin: 0 7.5px 20px;
       }
 
       &.size-1 {
